# farms

./: .buildinfo  .flake8  .gitignore  .pylintrc  README.md  README.rst  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/: release-drafter.yml
.github/workflows/: codecov.yml  gh_pages.yml  linter.yml  publish_to_pypi.yml  pull_request_tests.yml
_autosummary/: farms.disc.disc.html  farms.disc.html  farms.farms_dni.Pice.html  farms.farms_dni.Pwater.html  farms.farms_dni.TDD2.html  farms.farms_dni.TDDP.html  farms.farms_dni.farms_dni.html  farms.farms_dni.html  farms.html  farms.version.html
_farms/: farms.disc.disc.html  farms.disc.html  farms.farms.farms.html  farms.farms.html  farms.farms.ice_phase.html  farms.farms.water_phase.html  farms.farms_dni.Pice.html  farms.farms_dni.Pwater.html  farms.farms_dni.TDD2.html  farms.farms_dni.TDDP.html  farms.farms_dni.farms_dni.html  farms.farms_dni.html  farms.html  farms.utilities.calc_beta.html  farms.utilities.calc_dhi.html  farms.utilities.check_range.html  farms.utilities.cloud_variability.html  farms.utilities.dark_night.html  farms.utilities.html  farms.utilities.linear_variability.html  farms.utilities.merge_rest_farms.html  farms.utilities.normal_variability.html  farms.utilities.rayleigh.html  farms.utilities.screen_cld.html  farms.utilities.screen_sza.html  farms.utilities.ti_to_radius.html  farms.utilities.ti_to_radius_csv.html  farms.utilities.tri_variability.html  farms.utilities.uniform_variability.html  farms.version.html
_modules/: index.html
_modules/farms/: disc.html  farms.html  farms_dni.html  utilities.html
_sources/: api.rst  index.rst  installation.rst.txt
_sources/_autosummary/: farms.farms_dni.Pice.rst  farms.farms_dni.Pwater.rst  farms.farms_dni.TDD2.rst  farms.farms_dni.farms_dni.rst  farms.farms_dni.rst  farms.version.rst
_sources/_farms/: farms.disc.disc.rst.txt  farms.disc.rst.txt  farms.farms.farms.rst.txt  farms.farms.ice_phase.rst.txt  farms.farms.rst.txt  farms.farms.water_phase.rst.txt  farms.farms_dni.TDDP.rst.txt  farms.rst.txt  farms.utilities.calc_beta.rst.txt  farms.utilities.calc_dhi.rst.txt  farms.utilities.check_range.rst.txt  farms.utilities.cloud_variability.rst.txt  farms.utilities.dark_night.rst.txt  farms.utilities.linear_variability.rst.txt  farms.utilities.merge_rest_farms.rst.txt  farms.utilities.normal_variability.rst.txt  farms.utilities.rayleigh.rst.txt  farms.utilities.rst.txt  farms.utilities.screen_cld.rst.txt  farms.utilities.screen_sza.rst.txt  farms.utilities.ti_to_radius.rst.txt  farms.utilities.ti_to_radius_csv.rst.txt  farms.utilities.tri_variability.rst.txt  farms.utilities.uniform_variability.rst.txt
_sources/farms/: farms.disc.rst.txt
_sources/misc/: installation.rst
_static/: documentation_options.js
conda.recipe/: meta.yaml
docs/source/: conf.py  index.rst  installation.rst
docs/source/farms/: farms.farms.rst  farms.rst  farms.utilities.rst  farms.version.rst
docs/source/misc/: installation.rst  misc.rst
farms/: README.md  __init__.py  disc.py  earth_periodic_terms.csv  farms.disc.html  farms.farms.html  farms.html  farms.py  farms.utilities.html  farms.version.html  farms_dni.py  sun_earth_radius_vector.csv  utilities.py  version.py
farms/old/: farms_dni.py
misc/: installation.html  installation_usage.html
tests/: test_farmsdni.py  test_farmsdni1.py  test_utilities.py  testfarms.py
